Modifications of 06-ux-matters.Rmd

--- a/06-ux-matters.Rmd
+++ b/06-ux-matters.Rmd
@@ -2,16 +2,17 @@
 
 # UX Matters {#matters}
 
-We have a natural tendency, as R-coders, to be focused on the back-end, i.e the server part of the application^[aka what happens in the server side of a Shiny App]. 
-Which is perfectly normal—chances are yodid not't come to R to design front-ends
-^[Front-end are the visual parts of your application, the one your user interacts with, as opposed to the back-end, which is what is installed on the server, the part the end user does not see. 
+Let us state the truth: no matter how complex and innovative your backend is, your application is bad if your User Experience (UX) is bad. 
+That is the hard truth. 
+We have a natural tendency, as R-coders, to be focused on the back-end, _i.e_ the server part of the application^[aka what happens in the server side of a Shiny App]. 
+Which is perfectly normal.
+Chances are that you did not come to R to design front-ends^[Front-end are the visual parts of your application, the one your user interacts with, as opposed to the back-end, which is what is installed on the server, the part the end user does not see. 
 In Shiny, front-end is what correspond to the UI, back-end to the server.]. 
+However, if people can not understand how to use it, your application is not successful, no matter how incredible the backend is. 
 
-But let's state the truth: no matter how complex and innovative your back-end is, your application is bad if your User Experience (UX) is bad. 
-That's the hard truth. 
-If people can not understand how to use your application, or if your application front-end does not work at all, your application is not successful, no matter how innovative and incredible the computation algorithms in the back-end are.
-
-As you are building a complex, production-grade Shiny application, do not under-estimate the necessity for a successful front-end: it is after all the first thing (and probably the only thing) that the end-users of your web application will see, and our natural taste, as R developers, for back-end/server logic can deserve us on the long run: by neglecting the UI and the UX, you will make your application less likely to be adopted among your users ; which is a good way to fail your application project.
+As you are building a complex, production-grade Shiny application, do not under-estimate the necessity for a successful front-end: it is after all the first thing (and probably the only thing) that the end-users of your web application will see.
+This natural taste for back-end / server logic can deserve you on the long run: by neglecting the UI and the UX, you will make your application less likely to be adopted among your users. 
+Which is a good way to fail your application project.
 
 ## Simplicity is Gold
 
@@ -19,26 +20,24 @@ As you are building a complex, production-grade Shiny application, do not under-
 
 > __Colin Chapman CBE, Founder of Lotus Cars__
 
-There are mainly two contexts where you will be building a web app with R: 
+Aiming for simplicity is a hard thing, but some rules will help you start on a solid ground for a better user experience, thus a successful application.
 
-+ for professional use (i.e people will rely on this app to do their job)
-+ for fun (i.e people will just use the app as a distraction)
-
-But both cases have something in common: people will want the app to be usable, and __easily__ usable. 
+There are two main contexts where you will be building a web application with R: one for professional use (_i.e_ people will rely on this app to do their job), or for fun (_i.e_ people will only use the app as a distraction). 
+In both cases, people will want the app to be usable, and __easily__ usable. 
 
 If people use your app in a professional context, they do not want to fight with your interface, read complex manuals, or lose time understanding what they are supposed to do and how they are supposed to use your application. 
 In other words, they want an efficient tool: something that, beyond being accurate, is easy to grasp.
-In a professional context, when it comes to "Business applications", remember that the easier the learning curve the better the user experience.
-Think about all the professional applications and softwares that you've been ranting about during your professional life, all these cranky user interfaces you have not understand and/or you need to relearn every time you use them. 
+In a professional context, when it comes to "Business applications", remember that the quicker you understand the interface, the better the user experience.
+Think about all the professional applications and softwares that you ranted about during your professional life, all these cranky user interfaces you never understand and/or you need to relearn every time you use them. 
 You do not want your app to be one of these applications. 
 
-And on the other end, if users open your app for fun, they are not going to fight your app into submission: they are just going to give up if it is too complex to be used.
+On the other end, if users open your app for fun, they do not fight until submission: they will give up if it is too complex to be used.
 Even a game has to appear easy to use when the users open it.
 
 Aiming for simplicity is a hard thing, but following some rules will help you start on a solid ground.
-In this section, we'll review two general principals: the "do not make me think" principle, which states that interfaces should be as self-explanatory as possible, and the "Rule of least surprise", stating that elements should behave the way they are commonly expected to behave.
-These two rules aim at solving one issue: the bigger the cognitive load of your app is, the harder it will be for the end-user to use your app on a daily basis.
-And of course, the less a success your project will be. 
+In this section, we will review two general principals: the "do not make me think" principle, which states that interfaces should be as self-explanatory as possible, and the "Rule of least surprise", stating that elements should behave the way they are commonly expected to behave.
+These two rules aim at solving one issue: the bigger the cognitive load of your app, the harder for the end-user to use it on a daily basis.
+And of course, the less successful your project. 
 
 ### How we read the web: scanning content 
 
@@ -54,9 +53,10 @@ They are behaving like that for a lot of reason, but notably because they want t
 
 `r right_link("Don't make me think - Steve Krug", "http://sensible.com/dmmt.html")`
 
-For example, let's have a look at the user interface of `hexmake`, a Shiny app for building hex stickers, available at https://connect.thinkr.fr/hexmake/
+For example, let us have a look at the user interface of `hexmake`, a Shiny app for building hex stickers, available at https://connect.thinkr.fr/hexmake/
 
-![](img/hexmake.png
+![](img/hexmake.png)
+
 
 What will be your reading pattern for this application? 
 What is the first thing you will do when using this app?
@@ -178,7 +178,7 @@ What is the difference between the two?
 So the first is that the app is designed in such a way that there is no learning curve to using it.
 A self-explanatory app has a small learning curve, but it is designed in a way that will make the user understand it in a matter of seconds. 
 
-Let's for example get back to our `{tidytuesday201942}` application available at [connect.thinkr.fr/tidytuesday201942](https://connect.thinkr.fr/tidytuesday201942/)
+Let us for example get back to our `{tidytuesday201942}` application available at [connect.thinkr.fr/tidytuesday201942](https://connect.thinkr.fr/tidytuesday201942/)
 By itself, this application is not self-evident: you need to have a series of background knowledge before understanding what this application was designed for. 
 For example, you might need to have a vague sense of what `tidytuesday` is. 
 If you do not, you will have to read the home text, which will help you understand what this is. 
@@ -201,7 +201,7 @@ When we are browsing the web, we have a series of pre-conception about what thin
 For example, we expect an underline text to be clickable: so there is a good chance that if you use underline text inside your app, the user will try to click on it. 
 Usually, the link is also colored differently from the rest of the text. 
 Same goes for the pointer of the mouse, which usually switch from an arrow to a small hand with a finger up. 
-A lot of other conventions exist on the web, and you should endeavor to follow them: a clickable link should have at least one of the properties we just described—and if it is neither underlined nor colored nor changing the pointer when it is hovered, chances are that the usewill not't click on it. 
+A lot of other conventions exist on the web, and you should endeavor to follow them: a clickable link should have at least one of the properties we just described—and if it is neither underlined nor colored nor changing the pointer when it is hovered, chances are that the user will not click on it. 
 
 Just imagine for a second if our "Download" button in the `{tidytuesday201942}` app did not actually download the graph you had generated. 
 Even more, imagine if this button did not download the graph but something else. 
@@ -219,7 +219,7 @@ The hard thing is that it is something you spot when you are a new-comer: develo
 For a good summary of these, see [The cranky user: The Principle of Least Astonishment](https://www.ibm.com/developerworks/web/library/us-cranky10/us-cranky10-pdf.pdf)
 ].
 
-Let's exemplify this with the "Render" button from the [`{tidytuesday201942}`](https://connect.thinkr.fr/tidytuesday201942/) application. 
+Let us exemplify this with the "Render" button from the [`{tidytuesday201942}`](https://connect.thinkr.fr/tidytuesday201942/) application. 
 This app is built on top of Bootstrap 4, which has no CSS class for `{shiny}` action button^[
 `{shiny}` is built on top of Bootstrap 3, and the action buttons are of class `btn-default`, which was removed in Bootstrap 4.
 ]. 
@@ -234,10 +234,11 @@ To the one with a little bit of CSS (which is the one online):
 
 Yes, it is subtle, yet the second version of the button is clearer to understand.
 
-Least surprise is crucial to make the user experience a good one: users rarely think that if something is behaving unexpectedly on an app, it is because of the app?they willll usually think it is their fault.
+Least surprise is crucial to make the user experience a good one: users rarely think that if something is behaving unexpectedly on an app, it is because of the app?
+They will usually think it is their fault.
 Same goes for the application failing or behaving in an unexpected way: most users think they are "doing it wrong", instead of blaming the designer of the software.
 
-> When users are astonished they usually assume that they have made a mistake; they are unlikely to realize that the page has astonished them. They are more likely to feel that they are at fault for not anticipating the page. Don't take advantage of this; making users feel stupid is not endearing.
+> When users are astonished they usually assume that they have made a mistake; they are unlikely to realize that the page has astonished them. They are more likely to feel that they are at fault for not anticipating the page. Do not take advantage of this; making users feel stupid is not endearing.
 
 `r right_link("The cranky user: The Principle of Least Astonishment", "https://www.ibm.com/developerworks/web/library/us-cranky10/us-cranky10-pdf.pdf")`
 
@@ -252,9 +253,9 @@ A good and simple way to do that is to hide elements at step n+1 until all the r
 Indeed, you can be sure that if step 2 relies on step 1 and you did not hide step 2 until you have everything you need, users will go to step 2 too soon. 
 
 Another way to help this readability is to ensure some kind of linear logic through the app: step 1, data upload, step 2, data cleaning, step 3, data visualization, step 4, exporting the report. 
-And organized your application around this logic, from left to right / right to left, or from top to bottom. 
+And organised your application around this logic, from left to right / right to left, or from top to bottom. 
 
-Let's compare `{tidytuesday201942}` to `{hexmake}` — one has a clear progression, `{hexmake}`, and has been designed as such: the upper menus design the stickers, and then once they are filled you can download them. 
+Let us compare `{tidytuesday201942}` to `{hexmake}` — one has a clear progression, `{hexmake}`, and has been designed as such: the upper menus design the stickers, and then once they are filled you can download them. 
 So there is a progression here, from top to bottom. 
 On the other hand, the `{tidytuesday201942}` does not have a real progression inside it: you can navigate from one tab to the other indifferently. 
 Hence there is no visual clues of progression on that app.
@@ -302,7 +303,7 @@ Also, be generous when it comes to errors: it is rather frustrating for a user t
 So, if something fails or behaves unexpectedly, error messages are a key feature to help your user get on the right track. 
 And, at the same time, helping them correct themselves after an error is the best way to save you time answering angry emails!
 
-Let's refactor our app from before:
+Let us refactor our app from before:
 
 ```{r 06-ux-matters-5, eval = FALSE}
 library(shiny)
@@ -345,7 +346,7 @@ Here, as a user, it is way easier to understand what went wrong: we have moved f
 Perfect way to reduce your bug tracker incoming tickets!
 
 This is a way to do it natively in Shiny, but note that you can also use the  `{shinyAlert}` package to implement alerts. 
-It's also possible to build your own with a little bit of HTML, CSS and JavaScript, as shown on [the notifyjsexample repo](https://github.com/ColinFay/notifyjsexample).
+It is also possible to build your own with a little bit of HTML, CSS and JavaScript, as shown on [the notifyjsexample repo](https://github.com/ColinFay/notifyjsexample).
 
 ## The danger of feature-creep
 
@@ -369,7 +370,7 @@ Or, as simply put in _The Art of Unix Programing_:
 
 > Rule of Parsimony: Write a big program only when it is clear by demonstration that nothing else will do.
 
-But let's focus on a smaller scope, and think about some things that can be thought of as feature-creeping your Shiny app.
+But let us focus on a smaller scope, and think about some things that can be thought of as feature-creeping your Shiny app.
 
 ### Too much reactivity 
 
@@ -387,7 +388,7 @@ In the `{tidytuesday201942}` application example, let's imagine all the elements
 ![](img/tidytuesdayapp.png)
 
 So what should we do? 
-Prevent ourselves from implementing "full reactivity": instead, we'll add a user input that will launch the computation. 
+Prevent ourselves from implementing "full reactivity": instead, we will add a user input that will launch the computation. 
 The simplest solution being a button so that the user signals to the application than now they are ready for the application to compute what they have parametrized.
 
 ### Too much interactivity 
@@ -477,7 +478,7 @@ One other HTML method you can use is tags attributes as metadata.
 Tags attributes are complementary elements you can add to a tag to add information: most of the time, you will be using it to add a CSS class, and identifier, or maybe some events like `onclick`^[
 See the JavaScript chapter.
 ].
-But these can also be used to add, for example, an alternate text to an image: this `alt` being the one which is read when the image is not available, either because the page could notreach the resource, or because the person navigating the app is using a screen to speech technology. 
+But these can also be used to add, for example, an alternate text to an image: this `alt` being the one which is read when the image is not available, either because the page could not reach the resource, or because the person navigating the app is using a screen to speech technology. 
 
 ```{r 06-ux-matters-7, eval = FALSE}
 library(shiny)
@@ -504,8 +505,8 @@ shinyApp(ui, server)
 What makes these two things similar (semantic tags and tags metadata) is that they are both unseen by user without any impairment: if the image is correctly rendered and the user is capable of reading images, chances are that this user will see the image. 
 But these elements are made for people with disabilities, and especially users who might be using screen to speech technologies: these visitors use a software that scans the textual content of the page and reads it, and that helps navigate through the page. 
 
-This navigation is also crucial when it comes to screen to speech technology: these software will be able to read the `<title>` tag, jump to the `<nav>`, or straight to the `<article>` on the page. 
-Hence the importance of structuring the page: these technologies need the app to be built in a structured way, so that it's possible to jump from one section to another, and other common tasks a fully capable user will commonly do.
+This navigation is also crucial when it comes to screen to speech technology: these softwares will be able to read the `<title>` tag, jump to the `<nav>`, or straight to the `<article>` on the page. 
+Hence the importance of structuring the page: these technologies need the app to be built in a structured way, so that it is possible to jump from one section to another, and other common tasks a fully capable user will commonly do.
 
 Some other tags exists and can be used for semantic purpose: for example `<address>`, `<video>`, or `<label>`.
 
@@ -558,7 +559,7 @@ library(shiny)
 
 ui <- fluidPage(
   textInput("text", ""),
-  actionButton("send", "Don't click hit enter"),
+  actionButton("send", "Do not click hit enter"),
   verbatimTextOutput("typed"),
   nter("send", "text") # trigger 'send' button when 'text' is active.
 )
@@ -578,11 +579,11 @@ shinyApp(ui, server)
 #### Color choices
 
 Color blindness is also a common impairment when it comes to web accessibility.
-And it's a rather common deficiency: according to [colourblindawareness.org](http://www.colourblindawareness.org/), _"color (color) blindness (color vision deficiency, or CVD) affects approximately 1 in 12 men (8%) and 1 in 200 women in the world"_.
+And it is a rather common deficiency: according to [colourblindawareness.org](http://www.colourblindawareness.org/), _"color (color) blindness (color vision deficiency, or CVD) affects approximately 1 in 12 men (8%) and 1 in 200 women in the world"_.
 
 Keeping in mind this prevalence of color blindness is even more important in the context of Shiny, where we are developing data science products, which most of the time include data visualization. 
 If designed wrong, dataviz can be unreadable for some specific type of color blindness. 
-That's why we recommend using the `viridis` palette, which has been created to be readable by the most common types of color blindness. 
+That is why we recommend using the `viridis` palette, which has been created to be readable by the most common types of color blindness. 
 
 Here are for example a visualization through the lens of various type of color blindness: 
 
@@ -610,8 +611,8 @@ with_palette(matlab::jet.colors)
 with_palette(viridis::viridis)
 ```
 
-Even without color-blindness, it's already way more readable.
-But let's now use the `{dichromat}` package to simulate color blindness.
+Even without color-blindness, it is already way more readable.
+But let us now use the `{dichromat}` package to simulate color blindness.
 
 ```{r 06-ux-matters-13 }
 library(dichromat)
@@ -686,3 +687,4 @@ There are several tools on the web that can evaluate the accessibility of your w
 ![](img/hexmakeaccessibility.png)
 
 > {hexmake} accessibility results
+
