--- a/structure.Rmd
+++ b/structure.Rmd
@@ -225,7 +225,7 @@ Putting your application in production means that it should be deployed on a com
 #### Local deployment
 
 With a package, you can use classical tools to locally install your Shiny application.
-Inded, a Shiny App as a standard R package can be built as a `tar.gz`, sent to your colleagues, friends, and family, and even to the CRAN. 
+Indeed, a Shiny App as a standard R package can be built as a `tar.gz`, sent to your colleagues, friends, and family, and even to the CRAN. 
 It can also be installed in any R-package repository.
 You can then install your packaged App along with its dependencies using the appropriate `remotes::install_*()` command.
 And, if you built your app with `{golem}`, you will launch the app using: 
