--- a/ux-matters.Rmd
+++ b/ux-matters.Rmd
@@ -186,7 +186,7 @@ Compare this native design:
 
 ![](img/tidytuesdaybutton1.png)
 
-To the one with a little bit of CSS (which is the one online):
+To the one with a little bit of CSS (which is the one line):
 
 ![](img/tidytuesdaybutton2.png)
 
