--- a/12-step-by-step-secure.Rmd
+++ b/12-step-by-step-secure.Rmd
@@ -66,9 +66,188 @@ It’s not that straightforward to use, but once you get a good grasp of how it 
 
 ### Testing the app load
 
-// TODO
+#### `{shinyloadtest}`
 
-{shinyloadtest}, on the other hand, tests how an application behaves when one, two, three, twenty, one hundred users connect to the app, and gives you a visual report about the connection and response time of each session.
+`{shinyloadtest}`, on the other hand, tests how an application behaves when one, two, three, twenty, one hundred users connect to the app, and gives you a visual report about the connection and response time of each session.
+The idea with `{shinyloadtest}` is to first record a session where you mimic a user behaviour, then `shinycannon`, a command line tool coming with `{shinyloadtest}`, replays the recording several times. 
+Once the session has been replayed several times mimicing the session you've recorded, you have access to a report of the behavior of your app. 
+
+```{r}
+library(shinyloadtest)
+```
+
+```{r eval = FALSE}
+# Starting your app in another process
+p <- processx::process$new(
+  "Rscript", c("-e", "options('shiny.port'= 2811);hexmake::run_app()")
+)
+# Check that the process is alive
+Sys.sleep(5) # We wait for the app to be ready
+p$is_alive()
+browseURL("http:://localhost:2811")
+```
+
+Record the tests, potentially in a new dir: 
+
+```{r eval = FALSE}
+fs::dir_create("shinylogs")
+withr::with_dir(
+  "shinylogs", {
+    shinyloadtest::record_session("http://localhost:2811", port = 1234) 
+  }
+)
+```
+
+We now have a series of one or more recording(s) inside the `shinylogs/` folder: 
+
+Then, let's switch to our command line, and rerun the session with `shinycannon`. 
+The `shinycannon` command line tools take several argument: the path the `.log` file, the url of the app, `--workers` specify the number of concurrent connections to run, and the `--output-dir` argument specifies where the report should be written. 
+
+```{bash eval = FALSE}
+shinycannon shinylogs/recording.log http://localhost:2811 --workers 10 --output-dir shinylogs/run1
+```
+
+And now, we have new files inside the folder, corresponding to the session recordings. 
+
+```{r}
+fs::dir_tree("shinylogs", recurse = FALSE)
+```
+
+Good news: we do not have to manually analyse these files—`{shinyloadtest}` offers a series of wrapper functions to do that. 
+
+```{r, message = FALSE}
+shinyload_runs <- shinyloadtest::load_runs("5 workers" = "shinylogs/run1")
+```
+
+We now have a data.frame with 
+
+```{r}
+dplyr::glimpse(shinyload_runs)
+```
+
+Then, `{shinyloadtest}` comes with a series of plotting functions that can be used to analyse your recording. 
+Here are some examples:
+
++ `slt_session_duration()` plots the session duration, with the various types of event that takes computation time: JS and CSS load, R computation... 
+
+```{r}
+slt_session_duration(shinyload_runs)
+```
+
++ `slt_waterfall()` plots the waterfall graph of session durations, ordered by events. 
+
+```{r}
+slt_waterfall(shinyload_runs)
+```
+
+And if you need to bundle everything into an HTML reports, `shinyloadtest_report()` is what you're looking for. 
+
+```{r eval = FALSE}
+shinyloadtest_report(shinyload_runs)
+```
+
+So, to sum up with a step by step guide:
+
++ If the shiny app is only available on your machine, launch a process with `{processx}`, or in another R session, that launches the application. 
+You can either set the port with `options('shiny.port'= 2811)`, or let shiny decide for you. 
+Be sure that the process is running. 
+If the app is online, use the online url (and make sure you have access to the app).
+
++ Run `shinyloadtest::record_session(url)`. 
+You should probably set a different port for `{shinyloadtest}`, so that it doesn't try to connect on port 80. 
+
++ Play around with your app, record a scenario of usage
+
++ Close the tab where the app is running. 
+
++ Return to your terminal, and run the `shinycannon` command line tool
+
++ Wait for the process to be terminated
+
++ Go back to R, and then you can analyse the data from the recordings, either manually or by generating the html report 
+
+#### `{shinyloadtest}` & `{dockerstats}`
+
+Another thing you might want to monitor is the memory / CPU usage of your application, which `{shinyloadtest}` doesn't natively provide: the package records the load from the browser point of view, not from the server one. 
+That's where `{dockerstats}` can come into play: this package is a wrapper around the command line `docker stats`, and returns an R data.frame with the stats. 
+
+You can get the `{dockerstats}` package from GitHub with:
+
+```{r eval = FALSE}
+remotes::install_github("ColinFay/dockerstats")
+```
+
+With these stats, we can monitor the load on the app when it's run in a docker container. 
+
+```{r echo = FALSE}
+try({system("docker rm hexmake")})
+system("docker run --name hexmake --rm -p 2811:80 colinfay/hexmake", wait = FALSE)
+Sys.sleep(5)
+```
+
+```{r eval = FALSE}
+system("docker run --name hexmake --rm -p 2811:80 colinfay/hexmake", wait = FALSE)
+```
+
+Let's say now we want the stats for the hexmake container:
+
+```{r}
+dockerstats::dockerstats("hexmake")
+```
+
+Of course, right now we are not using the app, so the usage can be pretty small. 
+But let's push it a little bit an mimic a lot of connexions: to do that, we can replay our `shinycannon` call, with at the same time using the `dockerstats_recurse()` function, that will recursively call `dockerstats()` on a regular interval. 
+
+```{r include = FALSE}
+try({fs::dir_delete("shinylogs/run2")})
+```
+
+```{bash eval = FALSE}
+shinycannon shinylogs/recording.log http://localhost:2811 --workers 10 --output-dir shinylogs/run2
+```
+
+And let's launch at the same time a `dockerstats_recurse()`
+For example, here, we will be printing, on each loop, the `MemUsage` of the container, then saving the data inside a `dockerstats.csv` file. 
+
+```{r eval = FALSE}
+dockerstats_recurse(
+  "hexmake",
+  callback = function(res){
+    print(
+      paste("Mem usage: ", res$MemUsage)
+    )
+    write.table(
+      res, 
+      "dockerstats.csv", 
+      append = TRUE, 
+      col.names = FALSE, 
+      row.names = FALSE, 
+      sep = ","
+    )
+  }
+)
+```
+
+Here is what both look side to side:
+
+![](img/hexmake-dockerstats.png)
+
+As you can see, as the number of connections grow, the memory usage grows. 
+And we now have a csv with the evolution of the `docker stats` records over time:
+
+```{r}
+docker_stats <- readr::read_csv(
+  "shinylogs/dockerstats.csv", 
+  col_names = names(
+    dockerstats::dockerstats()
+  )
+)
+```
+
+```{r}
+dplyr::glimpse(docker_stats)
+```
+
 
 ## A reproducible environment
 
@@ -97,20 +276,20 @@ For example, here is an error from a real life error when pushing an app on a sh
 
 ``` bash
 root@westeros-vm:/var/log/shiny-server# cat thewall(...).log
- *** caught segfault ***
-  [...]
+*** caught segfault ***
+[...]
 address 0x5100004d, cause 'memory not mapped'
 
 Traceback:
- 1: rcpp_sf_to_geojson(sf, digits, factors_as_string)
- 2: sf_geojson.sf(data)
- 3: geojsonsf::sf_geojson(data)
- 4: addGlifyPolygons(., data = pol_V1, color = les_couleurs, popup = "val", opacity = 1)
- 5: function_list[[i]](value)
- 6: freduce(value, `_function_list`)
- 7: `_fseq`(`_lhs`)
- 8: eval(quote(`_fseq`(`_lhs`)), env, env)
-  [...]
+1: rcpp_sf_to_geojson(sf, digits, factors_as_string)
+2: sf_geojson.sf(data)
+3: geojsonsf::sf_geojson(data)
+4: addGlifyPolygons(., data = pol_V1, color = les_couleurs, popup = "val", opacity = 1)
+5: function_list[[i]](value)
+6: freduce(value, `_function_list`)
+7: `_fseq`(`_lhs`)
+8: eval(quote(`_fseq`(`_lhs`)), env, env)
+[...]
 105: captureStackTraces({    while (!.globals$stopped) {        ..stacktracefloor..(serviceApp())        Sys.sleep(0.001)    }})
 106: ..stacktraceoff..(captureStackTraces({    while (!.globals$stopped) {        ..stacktracefloor..(serviceApp())        Sys.sleep(0.001)    }}))
 107: runApp(Sys.getenv("SHINY_APP"), port = port, launch.browser = FALSE)
