--- a/13-secure.Rmd
+++ b/13-secure.Rmd
@@ -117,8 +117,46 @@ And of course, remember that git isn't reserved to Shiny Applications: it can be
 
 ### About `git-flow`
 
-// TODO 
+There are a lot of different ways and methodologies to organise your Git workflow. 
+One of the most popular one is called `git flow`, and we will give you here a quick introduction to how you can manage your work using this approach. 
+Please note that this is a quick introduction, not a complete guide: we will link to some further reading just at the end of this section. 
 
+So, here are the key concept of `git flow`: 
+
++ The `master` branch only contains stable code: most of the time is matches a taggable, fixed version (v0.0.1, 0.1.0, v1.0.0, etc). 
+A very small subset of developers involved in the project have writting access, and no developer should ever push code straight to this branch: new code to master only comes either from the `dev` branch, or from a `hotfix` branch. 
+
++ The `dev` branch, on the other hand, is the "Work in progress" branch: the one that contains the latest changes before they are merged into master. 
+This is the common working branch for every developers. 
+Most of the time, developers do not push code into these branch either: they make pull request to `dev` from one of their `feature branch`. 
+
++ A `feature branch` is one branch, forked from `dev`, that implements one of the feature of the application. 
+To keep a clean track of what each branch is doing, a good practice is to use `issue-XXX`, where `XXX` is the number of the issue. 
+
++ A `hot fix` branch is a branch to correct a critical issue in `master`.
+If forks from master, and is PR-ed straight into `master`. 
+
+Here is a summary of this process:
+
+![](img/GitFlowHotfixBranch.png)
+
+And, from a software engineer point of view, here is how daily work goes: 
+
++ Identify an issue to work on
+
++ Fork dev into `issue-XXX`
+
++ Develop feature inside the branch
+
++ `git stash`, `git rebase dev`, and `git stash apply` to include the latest changes from `dev`
+
++ Make a pull request to `dev` so that the feature is included
+
++ Once the PR is accepted by the project manager, notify the rest of the team that there have been changes to `dev`
+
++ Start working on a new feature
+
+Of course, there are way more subtleties to this flow of work. 
 
 ### Further readings on `git`
 
@@ -130,9 +168,74 @@ Git can be used in different ways and different approaches exist. The comprehens
 + https://www.git-tower.com/blog/git-cheat-sheet/
 
 
-## CI and testing
+## Automated testing
 
-Testing is central for making your application survive in the long run. 
-The {testthat} package can be used to test the "business logic" side of your app, while the application features can be tested with packages like {shinytest}, or software like Katalon. 
+We've seen in the previous chapter how to build a testing infrastructure for your app, notably using the `{testthat}` package. 
+What we have described is a way to build it locally, before running your test on your own machine. 
+But there is a big flaw to this approach: you have to remember to run the tests, be it regularly or before making a pull request/pushing to the server. 
+To do this kind of job, you will be looking for a tool to do automated testing at the repository level: in other words, a software that can test your application whenever a piece of code is pushed/moved on the repository.
 
-// TO DO: more info about the tools + link to resources.
+To do this, various tools are available, each with there own specifities. 
+Here is a non exhaustive list of the one you can choose:
+
+[travis-ci](https://travis-ci.org/) is a software that can be synced with your git repositories, and whenever something happens on the repo, the events described in the travis yaml are executed. 
+If they exit with a code 0, the test passes. 
+If they don't, the integrated tests have failed. 
+This travis integration can be used internally and externally: internally, in the sense that before merging any pull request, the project manager have access to a series of tests that are automatically launched. Externally, as a "health check" before installing a software: if you visit a GitHub repository that has travis badges included, you can check if the current state of the package / software is stable, i.e. if it passes the tests.
+
+Travis can do a lot more than just testing your app: it can be used to build documentation, deploy to production, or any other scripts you want to be run before/after the tests have passed. And the nice thing is that you can test for various versions of R, so that you are sure that you are supporting current, future and previous versions of R. 
+
+All of this is defined in the `.travis.yml` file, which is to be put at the root of your source directory, a file that is automatically generated when calling `usethis::use_travis()`.
+Here is an example of one of this file, for the `{golem}` package:
+
+```{r echo = FALSE,warning=FALSE, comment=""}
+readLines("https://raw.githubusercontent.com/ThinkR-open/golem/dev/.travis.yml") %>% 
+  glue::as_glue() %>% 
+  cat(sep = "\n")
+```
+
+[GitHub actions](https://github.com/features/actions) serve a related purpose: defining actions to be performed as responses to events on the GitHub repository. 
+Testing, building documentation, push to another repository, deploy on the server... all these actions can be automaticall performed. 
+As with travis, these actions are defined in a YAML. 
+Examples for these configuration can be find at [r-lib/actions](https://github.com/r-lib/actions). 
+
+If you are not working with GitHub but with GitLab, you can use the integrated `GitLab CI` service: it serves the same purpose as the two other services, with the little difference that it's completly docker-based: you define a YAML with a series of stages that are performed (concurrently or sequentially), and they are all launched inside a docker container. 
+To help you with this, the [`colinfay/r-ci-tidyverse`](https://hub.docker.com/r/colinfay/r-ci-tidyverse) docker image comes with preinstalled packages for testing: `{remotes}`, `{testthat}`, `{vdiffr}`, `{config}`... and is available for several R versions. 
+This docker image can be used as the source image for your `GitLab CI` yaml file. 
+
+Here is an example of one of these files
+
+``` yaml
+image: colinfay/r-ci-tidyverse:3.6.0
+
+cache:
+  paths:
+    - ci/
+
+stages:
+  - test
+  - document
+
+building:
+  stage: test
+  script:
+    - R -e "remotes::install_deps(dependencies = TRUE)"
+    - R -e 'devtools::check()'
+
+documenting:
+    stage: document
+    allow_failure: true
+    when: on_success
+    only:
+        - master
+    script:
+        - Rscript -e 'install.packages("DT")'
+        - Rscript -e 'covr::gitlab(quiet = FALSE)'
+    artifacts:
+        paths:
+            - public
+```
+
+Automated testing, continuous integration and continuous deployment is a vast topic that can't be covered in a few pages inside this book, but spending some time learning about is is definitely worth the time spent: the more you can automate processes, and the more you test, the more your application will be resilient, easy to maintain and easy to enhance. 
+Indeed, the more you check, the quicker you will discover bugs. 
+And the quicker you detect bugs, the easier it is to correct them!
