--- a/16-common-app-caveats.Rmd
+++ b/16-common-app-caveats.Rmd
@@ -168,8 +168,6 @@ Then, if a reactive context is invalidated, __you know why__.
 
 ### Building triggers and watchers
 
-// TODO 
-
 So the general pattern is that one: we create "flags" with an `init` function, trigger these "flags" with `trigger()`, and wherever we want these flags to invalidate the reactive context, we `watch()` these flags. 
 
 The idea here is to get a full control over the reactive flow: we only invalidate contexts when we want, making the general flow of the app more predictable.
@@ -190,7 +188,12 @@ watch <- function(name, session = getDefaultReactiveDomain()){
 }
 ```
 
-And, bonus, as these functions use the `session` object, they are available across all modules. That also means that you can easily trigger an event inside a model from another one. 
+And, bonus, as these functions use the `session` object, they are available across all modules. 
+That also means that you can easily trigger an event inside a module from another one. 
+
+This pattern is for example implemented into the latest version of `{hexmake}`. 
+For example, the rendering of the image on the right is fully controled by the [`"render"` flag](https://github.com/ColinFay/hexmake/blob/master/R/mod_right.R#L40). 
+The idea here is to allow a complete control over when the image is recomputed: only when `trigger("render")` is actually called do the app regenerate the image, helping us lower the reactivity of the app.
 
 ### Using R6 as a data storage
 
@@ -395,4 +398,89 @@ If using a database as a backend seems a little bit far-fetched to you, that's h
 
 ## Reading data
 
-// TODO
+Shiny Applications are a tool of choice when it comes to anaylysing data. 
+But that also means that these data have to be imported/read at some point in time, and reading data can be time consuming. 
+How can we optimize that? 
+In this section, we will have a look at three strategies: including datasets inside your application, using R tools for fast data reading, and when and why you should move to an exteral database system. 
+
+### Including Data in your Application
+
+If you are building your application using the `{golem}` framework, you are building your application as a package. 
+R packages provide a way to include internal datasets, that can then be used as objects inside your app. 
+This is the solution you should go for if your data are never to rarely updated: the datasets are created during package development, then included inside the build of your package.
+The plus side of this approach is that it makes the data fast to read, as they are serialized as R native objects.
+
+To include data inside your application, you can use the `usethis::use_data_raw( name = "my_dataset", open = FALSE )` command which is inside the `02_dev.R` script inside the `dev/` folder of your source application (if you are building the app with `{golem}`). 
+This will create a folder called `data-raw` at the root of your application folder, with a script to prepare your dataset. 
+Here, you can read the data, modify it if necessary, and then save it with `usethis::use_data(my_dataset)`. 
+Once this is done, you will have access to the `my_dataset` object inside your application. 
+
+This is for example what is done in the `{tidytuesday201942}` application, at [data-raw/big_epa_cars.R](https://github.com/ColinFay/tidytuesday201942/blob/master/data-raw/big_epa_cars.R): the csv is read there, and then used as an internal dataset inside the application. 
+
+### Reading Uploaded Data
+
+Other applications use data that are not available at build time: they are created to analyse data that are uploaded by users. 
+When you're building an application for this use case, the first thing you will need is to provide users a way to upload their dataset: `shiny::fileInput()`. 
+
+One crucial thing to keep in mind when it comes to using user-uploaded files is that you have to be strict in the file handling: 
+
++ Always specify what type of file you want: `shiny::fileInput()` has an `accept` parameter that allows you to set one or more [MIME types](https://en.wikipedia.org/wiki/Media_type). 
+When using this argument (for example with `text/csv`, `.csv`, or `.xslx`), the user will only be able to select a subset of files from their computer: the ones that matche the type. 
++ Always perform checks once the file is uploaded, even more if it is tabular data: column type, naming, empty rows...
+The more you check the file for potential errors, the less your application is likely to fail to analyze this dataset. 
++ If the data reading potentially takes a while, do not forget to add a visual progression cue: be it a `shiny::withProgress()` or tools from the [`{waiter}`](https://github.com/JohnCoene/waiter) package.
+
+Why do we do that? 
+Because whenever you offer a user the possibility to upload anything, you can be sure that at some point, they will upload a file that will make the app crash. 
+By setting a specific MIME type and by doing a series of check once the file is uploaded, you will make your application more stable. 
+Finally, having a visual cue that "something is happening" is very important for the user experience, and to prevent the user from clicking again and again on the upload button. 
+
+Now we have our `fileInput()` set, how do we read these data as fast as possible? 
+There are several options depending on the type of data you are reading. 
+Here are some packages that can make the file reading faster: 
+
+- For tabular, flat dataset (typically csv, tsv, or text), [`{vroom}`](https://github.com/r-lib/vroom) can read data at a 1.40 GB/sec/sec speed. 
+[{data.table}](https://github.com/Rdatatable/data.table), and its `fread()` function, is also fast at reading delimited datasets. 
+- For JSON files, [`{jsonlite}`](https://github.com/jeroen/jsonlite)
+- If you need to read Excel files inside your app, [`{readxl}`](https://github.com/tidyverse/readxl) offers a binding to the [`RapidXML`](http://rapidxml.sourceforge.net/) C++ library, reading Excel files fast. 
+
+### Using External DataBases
+
+Another type of data analysed in a shiny application is one contained inside an external database.
+Database are wildly used in the data science world, and in the software engineering as a whole. 
+Being a widely used source of data, databases come with API and drivers that help retrieving and transfering data: be it SQL, NoSQL, or even graph.
+
+Using a database is one of the solution for making your app lighter, and more performant on the long run, notably if you need to scale your app to thousands of visitors. 
+Indeed, if you plan on having your app scale to numerous people, that will mean that a lot of R processes will be triggered. 
+And if your data is contained in your app, this will mean that each R process will take a significant amount of RAM if the dataset is large. 
+For example, if your dataset alone takes ~300 mo of RAM, that means that if you want to launch the app 10 times, you'll need ~3go of RAM.
+On the other hand, if you decide to switch these data to an external database, it will lower the global RAM need: the DB will takes these 300mo of data, and each shiny application will make request to the database. 
+So, schematically, if the database needs 300mo, and one shiny app 50mo, then 10 app will be 300mo + 50 * 10 mo. 
+Of course, it's not as simplistic as that, and other things are to be considered: making database requests can be computationnally expensive, and might need some network adjustment. 
+But you get the idea. 
+
+Covering all the available type of databases and the packages associated with each is a very, very large topic: there are dozens of database systems, and dozens of packages to interact with them. 
+For a more extensive coverage of using databases in R, please follow these resources: 
+
++ [Databases using R](https://db.rstudio.com/), the official RStudio documentation around databases and R
+
++ [colinfay/r-db](https://colinfay.me/r-db/) is a docker image, with an companion guide, that bundles the toolchain for a lot of database systems for R
+
++ [CRAN Task View: Databases with R](https://cran.r-project.org/web/views/Databases.html): the official task view from CRAN with a series of packages for database manipulation
+
+### Reminder
+
+How to choose between these three methodologies:
+
+```{r echo= FALSE}
+knitr::kable(
+  data.frame(
+    Choice = c("Package data", "Reading files", "External DataBase"), 
+    Update = c("Never to very rare", "Uploaded by Users", "Never to Streaming"), 
+    Size = c("Low to medium", "Preferably low", "Low to Big")
+  )
+)
+```
+
+
+
