--- a/07-step-by-step-design.Rmd
+++ b/07-step-by-step-design.Rmd
@@ -25,7 +25,29 @@ That will help you get the big picture for the piece of code you'll be writing: 
 
 ### About Concept Map
 
-// TODO
+Using Concept Map to think about your app can be a valuable tool
+Concept maps are widely used, in the software engineering world and in many other fields.
+The idea with concept maps is to take a piece of paper (or a digital tool), where you draw all the concepts that come to mind for a specific topic, and all the relationships that link these concepts together. 
+Drawing a concept map is a way to organize the knowledge of a specific topic.
+
+When doing this for a piece software, we are not trying to add technical details about the way things are implemented: we are listing down the various "actors" around our app, with the relationships they have. 
+For example, here is a very simple concept map of the `{hexmake}` app. 
+
+![](img/hexmakemap.png)
+
+> Built with XMind (https://www.xmind.net)
+
+As you can see, we are not detailling the technical implementations: we are not writting the external database specificities, the connection process, how the different modules interact with each other... 
+The goal of a concept map is to think about the big picture, to see "who and what" of the application. 
+Here, creating this concept map helps us list the flow of the app: there is a user, that wants to parametrize an hex, built with default image or with an uploaded one, and once this hex is finished, the user can either download it or register it in a database. 
+This database can be browsed, and restore hex.
+The user can also export a `.hex` file, that can restore an app configuration.
+
+Once this general flow is written down, you can get back to it several times during the process of building the app, but it is of course a perfect tool at the end to see if everything is in place: once the application, can we point to any concept and see that it is there? Can we look at every relationship and see they all work as expected? 
+
+Deciding which level of details you want to put in your concept map depends: "simple" applications probably do not need complex maps. 
+And that also depends on how precise the specifications are, and how many people are working on the project: the concept map is a valuable tool when it comes to communication, as it allows people involved in the project to have visual clues of the conceptual architecture of the application. 
+But beware: too complex maps are also unreadble!
 
 ## Ask questions
 
