--- a/12-step-by-step-secure.Rmd
+++ b/12-step-by-step-secure.Rmd
@@ -122,11 +122,12 @@ try({system("docker rm hexmake")})
 The idea with `{shinyloadtest}` is to first record a session where you mimic a user behaviour, then `shinycannon`, a command line tool coming with `{shinyloadtest}`, replays the recording several times. 
 Once the session has been replayed several times mimicing the session you've recorded, you have access to a report of the behavior of your app. 
 
-```{r 12-step-by-step-secure-3}
+
+```{r 12-step-by-step-secure-4, eval = FALSE}
 library(shinyloadtest)
 ```
 
-```{r 12-step-by-step-secure-4, eval = FALSE}
+```{r eval = FALSE}
 # Starting your app in another process
 p <- processx::process$new(
   "Rscript", c("-e", "options('shiny.port'= 2811);hexmake::run_app()")
@@ -230,6 +231,7 @@ remotes::install_github("ColinFay/dockerstats")
 With these stats, we can monitor the load on the app when it's run in a docker container. 
 
 ```{r 12-step-by-step-secure-14, echo = FALSE, error = TRUE}
+try({system("docker rm hexmake")})
 system("docker run --name hexmake --rm -p 2811:80 colinfay/hexmake", wait = FALSE)
 Sys.sleep(5)
 ```
@@ -246,10 +248,6 @@ dockerstats::dockerstats("hexmake")
 
 Of course, right now we are not using the app, so the usage can be pretty small. 
 But let's push it a little bit an mimic a lot of connexions: to do that, we can replay our `shinycannon` call, with at the same time using the `dockerstats_recurse()` function, that will recursively call `dockerstats()` on a regular interval. 
-
-```{r 12-step-by-step-secure-17, include = FALSE}
-try({fs::dir_delete("shinylogs/run2")})
-```
 
 ```{bash 12-step-by-step-secure-18, eval = FALSE}
 shinycannon shinylogs/recording.log http://localhost:2811 --workers 10 --output-dir shinylogs/run2
@@ -300,8 +298,6 @@ dplyr::glimpse(docker_stats)
 ```{r 12-step-by-step-secure-2-bis, include=FALSE}
 try({system("docker rm hexmake")})
 ```
-
-
 
 ## A reproducible environment
 
